--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-URL: https://github.com/MMJansen/animalsounds
+URL: https://github.com/MMJansen/animalsounds, https://mmjansen.github.io/animalsounds/
 BugReports: https://github.com/MMJansen/animalsounds/issues
 Imports: 
     cli,
